# tube_cutter

./: .gitignore  Cargo.toml  LICENSE  README.md  prefs.json  pubspec.yaml  readme.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: gcodePreviewPage.dart  homePage.dart  main.dart  runJobPage.dart  settingsPage.dart  tunePage.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: cut.dart  gcode.dart  machine.dart  sender.dart  settings.dart  simple.dart  status.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: cut.rs  gcode.rs  mod.rs  sender.rs  settings.rs  simple.rs  status.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutter_tube_cutter.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_tube_cutter.podspec
rust_builder/windows/: CMakeLists.txt
src/: gcode.rs  main.rs  sender.rs  status.pest  status.rs
src/phosphor_fonts/: mod.rs
src/phosphor_fonts/variants/: mod.rs  regular.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
